--- a/teacher/pages/views/user/login.html
+++ b/teacher/pages/views/user/login.html
@@ -99,14 +99,15 @@
         base: '../../layuiadmin/' //静态资源所在路径
     }).extend({
         index: 'lib/index' //主入口模块
-    }).use(['index', 'user', 'baseAjax'], function () {
+    }).use(['index', 'user', 'baseAjax', 'layer'], function () {
         var $ = layui.$
             , setter = layui.setter
             , admin = layui.admin
             , form = layui.form
             , router = layui.router()
             , search = router.search
-            , base_ajax = layui.baseAjax;
+            , base_ajax = layui.baseAjax
+            , layer = layui.layer;
 
         form.render();
 
@@ -115,42 +116,63 @@
             var data = data.field;
             console.log(data);
 
-            // base_ajax.post("system/user/login", JSON.stringify(data), function (result) {
-            //     console.log(result.data);
-            // })
+            base_ajax.post("/system/manger/login", JSON.stringify(data), function (result) {
+                var data = result.data;
+                console.log(data);
+                if (data != undefined) {
+                    layui.data('user', {
+                        key: 'name', value: data.name
+                    });
+                    layui.data('user', {
+                        key: 'id', value: data.id
+                    });
+                    layui.data('user', {
+                        key: 'idCard', value: data.idCard
+                    });
+                    layui.data('user', {
+                        key: 'phone', value: data.phone
+                    });
+                    alert("登录成功！");
+                } else {
+                    layer.msg(data.msg, {time: 1000});
+                    console.log(data.msg);
+
+                }
+
+            });
 
 
             //请求登入接口
-            admin.req({
-                url: layui.setter.base + 'json/user/login.js' //实际使用请改成服务端真实接口
-                , data: data
-                , done: function (res) {
-
-                    //请求成功后，写入 access_token
-                    layui.data(setter.tableName, {
-                        key: setter.request.tokenName
-                        , value: res.data.access_token
-                    });
-
-                    //登入成功的提示与跳转
-                    layer.msg('登入成功', {
-                        offset: '15px'
-                        , icon: 1
-                        , time: 1000
-                    }, function () {
-                        location.href = '../'; //后台主页
-                    });
-                }
-            });
+            // admin.req({
+            //     url: layui.setter.base + 'json/user/login.js' //实际使用请改成服务端真实接口
+            //     , data: data
+            //     , done: function (res) {
+            //
+            //         //请求成功后，写入 access_token
+            //         layui.data(setter.tableName, {
+            //             key: setter.request.tokenName
+            //             , value: res.data.access_token
+            //         });
+            //
+            //         //登入成功的提示与跳转
+            //         layer.msg('登入成功', {
+            //             offset: '15px'
+            //             , icon: 1
+            //             , time: 1000
+            //         }, function () {
+            //             location.href = '../'; //后台主页
+            //         });
+            //     }
+            // });
 
         });
 
 
         //实际使用时记得删除该代码
-        layer.msg('为了方便演示，用户名密码可随意输入', {
-            offset: '15px'
-            , icon: 1
-        });
+        // layer.msg('为了方便演示，用户名密码可随意输入', {
+        //     offset: '15px'
+        //     , icon: 1
+        // });
 
     });
 </script>
