--- a/teacher/pages/views/index.html
+++ b/teacher/pages/views/index.html
@@ -34,10 +34,10 @@
                         <i class="layui-icon layui-icon-refresh-3"></i>&nbsp;&nbsp;刷新
                     </a>
                 </li>
-                <li class="layui-nav-item layui-hide-xs" lay-unselect>
-                    <input type="text" placeholder="搜索..." autocomplete="off" class="layui-input layui-input-search"
-                           layadmin-event="serach" lay-action="template/search.html?keywords=">
-                </li>
+<!--                <li class="layui-nav-item layui-hide-xs" lay-unselect>-->
+                <!--                    <input type="text" placeholder="搜索..." autocomplete="off" class="layui-input layui-input-search"-->
+                <!--                           layadmin-event="serach" lay-action="template/search.html?keywords=">-->
+                <!--                </li>-->
             </ul>
             <ul class="layui-nav layui-layout-right" lay-filter="layadmin-layout-right">
 
@@ -59,11 +59,11 @@
                 <!--                        <i class="layui-icon layui-icon-note"></i>-->
                 <!--                    </a>-->
                 <!--                </li>-->
-                <li class="layui-nav-item layui-hide-xs" lay-unselect>
-                    <a href="javascript:;" layadmin-event="fullscreen">
-                        <i class="layui-icon layui-icon-screen-full"></i>
-                    </a>
-                </li>
+<!--                <li class="layui-nav-item layui-hide-xs" lay-unselect>-->
+                <!--                    <a href="javascript:;" layadmin-event="fullscreen">-->
+                <!--                        <i class="layui-icon layui-icon-screen-full"></i>-->
+                <!--                    </a>-->
+                <!--                </li>-->
                 <li class="layui-nav-item" lay-unselect>
                     <a href="javascript:;">
                         <cite>贤心</cite>
