--- a/teacher/pages/views/messagepush/user-list.html
+++ b/teacher/pages/views/messagepush/user-list.html
@@ -2,9 +2,129 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="renderer" content="webkit"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="format-detection" content="telephone=no"/>
+    <title>用户列表</title>
+    <link rel="stylesheet" href="../../layuiadmin/layui/css/layui.css">
+    <link rel="stylesheet" href="../../layuiadmin/style/admin.css">
+    <link rel="stylesheet" href="../../../css/backgroundLayout.css">
 </head>
 <body>
-用户列表
+<div class="layui-fluid">
+    <div class="container">
+        <div class="container-header">
+            <div class="layui-row layui-col-space15">
+                <div class="layui-col-md12">
+                    <div class="layui-card layui-anim layui-anim-upbit">
+                        <div class="layui-card-body">
+                            <form class="layui-form">
+                                <div class="layui-form layui-form-pane">
+                                    <div class="layui-form-item">
+                                        <div class="layui-inline">
+                                            <label class="layui-form-label">姓名</label>
+                                            <div class="layui-input-inline">
+                                                <input type="text" class="layui-input" name="name" placeholder="">
+                                            </div>
+                                        </div>
+                                        <div class="layui-inline">
+                                            <label class="layui-form-label">身份证</label>
+                                            <div class="layui-input-inline">
+                                                <input type="text" class="layui-input" name="idCard" placeholder="">
+                                            </div>
+                                        </div>
+                                        <div class="layui-inline">
+                                            <label class="layui-form-label">手机号</label>
+                                            <div class="layui-input-inline">
+                                                <input type="text" class="layui-input" name="phone" placeholder="">
+                                            </div>
+                                        </div>
+                                        <div class="layui-inline">
+                                            <button type="button" class="layui-btn layui-btn-self" lay-submit
+                                                    lay-filter="query-form"><i
+                                                    class="layui-icon">&#xe615;</i>查询
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-content">
+            <div class="layui-row layui-col-space15">
+                <div class="layui-col-md12">
+                    <div class="layui-card layui-anim layui-anim-upbit">
+                        <div class="layui-card-body">
+                            <table class="layui-hide" id="user-data-table" lay-filter="user-data"></table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="../../../js/jq/jquery-3.3.1.js"></script>
+<script src="../../layuiadmin/layui/layui.js"></script>
+<script type="text/html" id="barDemo">
+    <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="configure">配置</a>
+</script>
+<script>
+    layui.config({}).use(['jquery', 'baseAjax', 'form', 'table'], function () {
+        var $ = layui.jquery
+            , base_ajax = layui.baseAjax
+            , form = layui.form
+            , table = layui.table;
+
+
+        table.render({
+            elem: '#user-data-table'
+            , cols: [[
+                {type: 'numbers'}
+                , {field: 'id', title: '编号', align: 'center', hide: true}
+                , {field: 'name', title: '姓名', sort: true, align: 'center'}
+                , {field: 'idCard', title: '身份证号', sort: true, align: 'center'}
+                , {field: 'phone', title: '手机号', sort: true, align: 'center'}
+                , {field: 'marriage', title: '是否婚配', align: 'center'}
+                , {field: 'birthday', title: '生日', align: 'center'}
+                , {field: 'title', title: '职称', align: 'center'}
+                , {field: 'education', title: '学历', sort: true, align: 'center'}
+                , {field: 'houseSize', title: '预选房子大小', align: 'center'}
+                , {field: 'memberFamily', title: '家庭成员', sort: true, align: 'center'}
+                , {field: 'creatTime', title: '创建时间', sort: true, align: 'center'}
+                , {field: 'editTime', title: '修改时间', align: 'center'}
+                , {field: 'status', title: '审核状态', align: 'center'}
+                , {field: 'code', title: 'code', align: 'center'}
+                , {field: 'scrod', title: '选房积分', align: 'center'}
+                , {field: 'titleId', title: '职称id', align: 'center', hide: true}
+                , {align: 'center', title: '操作', toolbar: '#barDemo'}
+            ]]
+            , page: true
+            , loading: false
+            , request: {
+                pageName: 'pages' //页码的参数名称，默认：page
+                , limitName: 'size' //每页数据量的参数名，默认：limit
+            }
+            , even: true
+            , limit: 10
+            , limits: [10, 20, 50]
+            , loading: true
+            , response: {
+                statusName: 'status' //数据状态的字段名称，默认：code
+                , statusCode: 2 //成功的状态码，默认：0
+                , msgName: 'msg' //状态信息的字段名称，默认：msg
+                , countName: 'total' //数据总数的字段名称，默认：count
+                , dataName: 'data' //数据列表的字段名称，默认：data
+            }
+        });
+
+    });
+</script>
 </body>
 </html>
