--- a/teacher/pages/views/user/login.html
+++ b/teacher/pages/views/user/login.html
@@ -33,22 +33,6 @@
                 <input type="password" name="password" id="LAY-user-login-password" lay-verify="pass" placeholder="密码"
                        class="layui-input">
             </div>
-            <!--            <div class="layui-form-item">-->
-            <!--                <div class="layui-row">-->
-            <!--                    <div class="layui-col-xs7">-->
-            <!--                        <label class="layadmin-user-login-icon layui-icon layui-icon-vercode"-->
-            <!--                               for="LAY-user-login-vercode"></label>-->
-            <!--                        <input type="text" name="vercode" id="LAY-user-login-vercode" lay-verify="required"-->
-            <!--                               placeholder="图形验证码" class="layui-input">-->
-            <!--                    </div>-->
-            <!--                    <div class="layui-col-xs5">-->
-            <!--                        <div style="margin-left: 10px;">-->
-            <!--                            <img src="https://www.oschina.net/action/user/captcha" class="layadmin-user-login-codeimg"-->
-            <!--                                 id="LAY-user-get-vercode">-->
-            <!--                        </div>-->
-            <!--                    </div>-->
-            <!--                </div>-->
-            <!--            </div>-->
             <div class="layui-form-item" style="margin-bottom: 20px;">
                 <input type="checkbox" name="remember" lay-skin="primary" title="记住密码">
                 <a href="forget.html" class="layadmin-user-jump-change layadmin-link" style="margin-top: 7px;">忘记密码？</a>
@@ -77,23 +61,11 @@
         </p>
     </div>
 
-    <!--<div class="ladmin-user-login-theme">
-      <script type="text/html" template>
-        <ul>
-          <li data-theme=""><img src="{{ layui.setter.base }}style/res/bg-none.jpg"></li>
-          <li data-theme="#03152A" style="background-color: #03152A;"></li>
-          <li data-theme="#2E241B" style="background-color: #2E241B;"></li>
-          <li data-theme="#50314F" style="background-color: #50314F;"></li>
-          <li data-theme="#344058" style="background-color: #344058;"></li>
-          <li data-theme="#20222A" style="background-color: #20222A;"></li>
-        </ul>
-      </script>
-    </div>-->
-
 </div>
 
 <script src="../../layuiadmin/layui/layui.js"></script>
 <script src="../../../js/jq/jquery-3.3.1.js"></script>
+<script src="../../../js/index-platform.js"></script>
 <script>
     layui.config({
         base: '../../layuiadmin/' //静态资源所在路径
@@ -119,18 +91,9 @@
             base_ajax.post("/system/manger/login", JSON.stringify(data), function (result) {
                 var status = result.status;
                 if (status == 2) {
-                    // layui.data('user', {
-                    //     key: 'name', value: data.name
-                    // });
-                    // layui.data('user', {
-                    //     key: 'id', value: data.id
-                    // });
-                    // layui.data('user', {
-                    //     key: 'idCard', value: data.idCard
-                    // });
-                    // layui.data('user', {
-                    //     key: 'phone', value: data.phone
-                    // });
+                    layui.data('user', {
+                        key: 'phone', value: data.phone
+                    });
                     alert("登录成功！");
                     window.location.replace(base_ajax.projectUrl + "pages/views/index.html");
                 } else {
