--- a/teacher/pages/views/campusinfo/campus-info.html
+++ b/teacher/pages/views/campusinfo/campus-info.html
@@ -2,10 +2,113 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet">
+    <meta name="renderer" content="webkit"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="format-detection" content="telephone=no"/>
+    <title>校区信息</title>
+    <link rel="stylesheet" href="../../layuiadmin/layui/css/layui.css">
+    <link rel="stylesheet" href="../../layuiadmin/style/admin.css">
+    <link rel="stylesheet" href="../../../css/backgroundLayout.css">
 </head>
 <body>
-校区信息
+<div class="layui-fluid">
+    <div class="container">
+        <div class="container-header">
+            <div class="layui-row layui-col-space15">
+                <div class="layui-col-md12">
+                    <div class="layui-card layui-anim layui-anim-upbit">
+                        <div class="layui-card-body">
+                            <form class="layui-form">
+                                <div class="layui-form layui-form-pane">
+                                    <div class="layui-form-item">
+                                        <div class="layui-inline">
+                                            <label class="layui-form-label">学校名称</label>
+                                            <div class="layui-input-inline">
+                                                <input type="text" class="layui-input" name="name" placeholder="">
+                                            </div>
+                                        </div>
+                                        <div class="layui-inline">
+                                            <label class="layui-form-label">学校地址</label>
+                                            <div class="layui-input-inline">
+                                                <input type="text" class="layui-input" name="address" placeholder="">
+                                            </div>
+                                        </div>
+                                        <div class="layui-inline">
+                                            <button type="button" class="layui-btn layui-btn-self" lay-submit
+                                                    lay-filter="query-form"><i
+                                                    class="layui-icon">&#xe615;</i>查询
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-content">
+            <div class="layui-row layui-col-space15">
+                <div class="layui-col-md12">
+                    <div class="layui-card layui-anim layui-anim-upbit">
+                        <div class="layui-card-body">
+                            <table class="layui-hide" id="campus-data-table" lay-filter="user-data"></table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="../../../js/jq/jquery-3.3.1.js"></script>
+<script src="../../layuiadmin/layui/layui.js"></script>
+<script>
+    layui.config({}).use(['jquery', 'baseAjax', 'form', 'table'], function () {
+        var $ = layui.jquery
+            , base_ajax = layui.baseAjax
+            , form = layui.form
+            , table = layui.table;
+
+        table.render({
+            elem: '#campus-data-table'
+            , cols: [[
+                {type: 'numbers'}
+                , {field: 'id', title: '学校Id', align: 'center', hide: true}
+                , {field: 'name', title: '学校名称', sort: true, align: 'center'}
+                , {field: 'introduction', title: '学校简介', sort: true, align: 'center'}
+                , {field: 'titleImg', title: '校标题图片', sort: true, align: 'center'}
+                , {field: 'creatTime', title: '创建时间', align: 'center'}
+                , {field: 'editTime', title: '修改时间', align: 'center'}
+                , {field: 'provinceId', title: '省id', align: 'center', hide: true}
+                , {field: 'province', title: '省名称', sort: true, align: 'center'}
+                , {field: 'cityId', title: '市id', align: 'center', hide: true}
+                , {field: 'city', title: '城市名称', sort: true, align: 'center'}
+                , {field: 'areaId', title: '区id', sort: true, align: 'center', hide: true}
+                , {field: 'area', title: '区名称', align: 'center'}
+                , {field: 'address', title: '学校地址', align: 'center'}
+            ]]
+            , page: true
+            , loading: false
+            , request: {
+                pageName: 'pages' //页码的参数名称，默认：page
+                , limitName: 'size' //每页数据量的参数名，默认：limit
+            }
+            , even: true
+            , limit: 10
+            , limits: [10, 20, 50]
+            , loading: true
+            , response: {
+                statusName: 'status' //数据状态的字段名称，默认：code
+                , statusCode: 2 //成功的状态码，默认：0
+                , msgName: 'msg' //状态信息的字段名称，默认：msg
+                , countName: 'total' //数据总数的字段名称，默认：count
+                , dataName: 'data' //数据列表的字段名称，默认：data
+            }
+        });
+    })
+</script>
 </body>
 </html>
