--- a/teacher/pages/views/userinfo/user-info.html
+++ b/teacher/pages/views/userinfo/user-info.html
@@ -2,9 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="renderer" content="webkit"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="format-detection" content="telephone=no"/>
+    <title>用户信息</title>
+    <link rel="stylesheet" href="../../layuiadmin/layui/css/layui.css">
+    <link rel="stylesheet" href="../../layuiadmin/style/admin.css">
+    <link rel="stylesheet" href="../../../css/backgroundLayout.css">
 </head>
 <body>
-用户信息
+
+
+<script src="../../../js/jq/jquery-3.3.1.js"></script>
+<script src="../../layuiadmin/layui/layui.js"></script>
 </body>
 </html>
